istio-demo1/ex1/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example1-app
spec:
  hosts:
  - "*"
  gateways:
  - example1-gateway
  http:
  - route:
    - destination:
        host: example1
        subset: v1
      weight: 10
    - destination:
        host: example1
        subset: v2
      weight: 90
